# fastapi_mcp

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py  test_mcp_tools.py
.github/: codecov.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md
.github/workflows/: ci.yml  release.yml
examples/: README.md  filtered_tools_example.py  full_schema_description_example.py  mount_specific_router_example.py  reregister_tools_example.py  run_example.py  sample_app.py  separate_server_example.py  simple_example.py  simple_integration.py
examples/shared/: setup.py
examples/shared/apps/: items.py
fastapi_mcp/: __init__.py  __main__.py  cli.py  converter.py  discovery.py  execute.py  generator.py  http_tools.py  mcp_tools.py  openapi_utils.py  server.py  types.py  utils.py
fastapi_mcp/openapi/: convert.py  utils.py
fastapi_mcp/transport/: sse.py
fastapi_mcp/utils/: testing.py
tests/: README.md  conftest.py  manual_test_mcp_tools.py  test_basic_functionality.py  test_configuration.py  test_http_tools.py  test_mcp_complex_app.py  test_mcp_simple_app.py  test_openapi_conversion.py  test_sample_app.py  test_server.py  test_tool_generation.py
tests/fixtures/: complex_app.py  example_data.py  simple_app.py  types.py
